--- a/project1/style.css
+++ b/project1/style.css
@@ -9,6 +9,21 @@
     position: relative;
 
 }
+.button1{
+    position: relative;
+    top: -700px;
+    left:300px;
+    background-color: white;
+    border: 2px solid white;
+}
+.button2{
+    position: relative;
+    top: -700px;
+    left:300px;
+    background-color:red;
+    border: 2px solid white;
+}
+
 
 .bannertext {
     position: absolute;
@@ -107,10 +122,11 @@
     font-size: 16px;
     color:black;
     padding: 8px 16px;
-    background-color: blue ;
+    background-color: gray ;
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease ;
+    
   }
 
   body {
@@ -167,6 +183,39 @@ button {
 
 .next {
     right:-5px;
+}
+ .gallery { 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-left: 100px;
+}
+.gallery img {
+    width: 20%;
+    cursor: pointer;
+}
+
+
+
+.container3{
+    width:100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+}.gallery{
+    display: grid;
+    grid-template-columns: repeat(5,1fr)
+    
+}
+.gallery img{
+    width: 100%;
+}
+.box img{
+    width: 100px;
+
 }
 
 
