--- a/second1/style1.css
+++ b/second1/style1.css
@@ -3,18 +3,36 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 .container {
     width: 100%;
     position: relative;
+    background-color: grey;
 
 }
+.button1{
+    position: relative;
+    top: -300px;
+    left:300px;
+    background-color: white;
+    border: 2px solid white;
+}
+.button2{
+    position: relative;
+    top: -400px;
+    left:300px;
+    background-color:red;
+    border: 2px solid white;
+}
+
 
 .bannertext {
     position: absolute;
     top: 200px;
     color: white;
     padding: 50px;
+    left: 200px;
 }
 
 .bannertext h1 {
@@ -22,6 +40,9 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     font-style: normal;
+}
+.bannertext span{
+    color: red;
 }
 
 .content h2 {
@@ -107,10 +128,11 @@
     font-size: 16px;
     color:black;
     padding: 8px 16px;
-    background-color: blue ;
+    background-color: gray ;
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease ;
+    
   }
 
   body {
@@ -176,6 +198,52 @@ button {
         display:none;
     }
 }
+ .gallery { 
+    display: flex;
+    flex-wrap: wrap;
+    
+    margin-left: 100px;
+}
+.gallery img {
+    width: 120%;
+    cursor: pointer;
+}
+
+
+
+.container3{
+    width:100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+}.gallery{
+    display: grid;
+    grid-template-columns: repeat(5,1fr)
+    
+}
+.gallery img{
+    width: 100%;
+}
+.box img{
+    width: 100px;
+
+}
+@media screen and (max-width: 1024px) {
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
 
 
      
