--- a/second1/style1.css
+++ b/second1/style1.css
@@ -9,6 +9,8 @@
 body{
     background: rgb(238,174,202);
 background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(233,171,148,0.9808298319327731) 100%);
+overflow-x: hidden;
+
 }
 
 .container img {
@@ -345,6 +347,7 @@ button {
     }
 
     .gallery img {
+        display: none;
         width: 100%;
     }
 }
@@ -437,4 +440,107 @@ button {
   to {opacity: 1}
 }
 
+  .slider2{
+    
+    max-width: 500px;
+    height: 400px;
+    position: relative;
+    user-select: none;
+    
+  }
+  .silder img{
+    width:;
+    height: 20%;
+
+  }
+  .slider2-item{
+    display:none ;
+  }
+
+  .active{
+    display: block;
+    animation: fadeAnimation 1s;
+  }
+  .slider2{
+    width: 100wh;
+    height: 100vh;
+    position: relative;
+    left: 500px;
+    margin-bottom: 600px;
+  }
+  .slider2-btns{
+    
+   /*position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    visibility: hidden;*/
+    position: absolute;
+    top:150px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    visibility: hidden;
+
+    
+    
+  }
+
+  .slider2-btns button{
+    font-size: 30px;
+    font-weight: 400;
+    background-color: whitesmoke;
+    border: none;
+    color: black;
+    line-height: 30px;
+    cursor:pointer ;
+  }
+  .slider2:hover .slider2-btns{
+    visibility: visible;
+
+  }
+
+  @keyframes fadeAnimation {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        transition: opacity linear;
+    }
+  }
+
+
+.dots{
+    background-color: brown;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    background-color:rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color:hsla(71, 90%, 40%, 0.981);
+    cursor:pointer;
+
+}
+.dot-active{
+    background-color:white;
+}
+.dots {
+    text-align: center;
+    margin-top: 10px;
+}
+.slider2-item img {
+    max-width: 100%; 
+    height: auto;
+}
 
